tests/reference/asr-dnint_args-3d72f4b.stderr
semantic error: Too many arguments to call `dnint`
 --> tests/errors/dnint_args.f90:2:13
  |
2 |     print*, dnint(1.0_8, 8)
  |             ^^^^^^^^^^^^^^^ 
